# OSF15_Exercise2

./: .gitignore  CMakeLists.txt  README.md
bs/: CMakeLists.txt
bs/include/: block_store.h
bs/src/: block_store.c  generate_drive.cpp
bs/test/: test.c
